force-app/main/default/objects/Lease_Termination__c/Lease_Termination__c.object-meta.xml
<CustomObject>
    <description>Used to notify the LL that a lease will be terminated</description>
    <label>Lease Termination (NNR/NOT/TOO)</label>
    <nameField>
        <label>Lease Termination (NNR/NOT/TOO)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Terminations (NNR/NOT/TOO)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>