force-app/main/default/objects/Lease_Termination__c/fields/Contact_Email_for_Questions__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_for_Questions__c</fullName>
    <label>Contact Email for Questions</label>
    <type>Email</type>
</CustomField>