force-app/main/default/objects/Lease_Termination__c/fields/Landlord_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord Entity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Cell_Site_Landlord__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>The record selected must be identified as a cell site landlord.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lease_Terminations</relationshipName>
    <type>Lookup</type>
</CustomField>