force-app/main/default/objects/Lease_Termination__c/fields/Landlord_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mailing_Address__c</fullName>
    <formula>Landlord_Entity_Name__r.Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Mailing Address</label>
    <type>Text</type>
</CustomField>