force-app/main/default/objects/Lease_Termination__c/fields/Landlord_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mailing_State__c</fullName>
    <formula>Landlord_Entity_Name__r.Mailing_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landlord Mailing State</label>
    <type>Text</type>
</CustomField>