force-app/main/default/objects/Lease_Termination__c/fields/Lease_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Abstract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Abstract</label>
    <referenceTo>Lease_Abstract__c</referenceTo>
    <relationshipName>Lease_Terminations</relationshipName>
    <type>Lookup</type>
</CustomField>