force-app/main/default/objects/Lease_Termination__c/fields/Lease_License_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_License_Name__c</fullName>
    <label>Lease/License Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>