force-app/main/default/objects/Lease_Termination__c/fields/Lease_license_Original_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_license_Original_Date__c</fullName>
    <label>Lease/license Original Date</label>
    <type>Date</type>
</CustomField>