force-app/main/default/objects/Lease_Termination__c/fields/Lease_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation</label>
    <referenceTo>Lease_Negotiation__c</referenceTo>
    <relationshipLabel>Lease Terminations (NNR/NOT/TOO)</relationshipLabel>
    <relationshipName>Lease_Terminations</relationshipName>
    <type>Lookup</type>
</CustomField>