force-app/main/default/objects/Lease_Termination__c/fields/LL_Negotiations_Initiated__c.field-meta.xml
<CustomField>
    <fullName>LL_Negotiations_Initiated__c</fullName>
    <label>LL Negotiations Initiated (Date)</label>
    <type>Date</type>
</CustomField>