force-app/main/default/objects/Lease_Termination__c/fields/LL_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>LL_Site_ID__c</fullName>
    <label>Landlord Site ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>