force-app/main/default/objects/Lease_Termination__c/fields/Master_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Date__c</fullName>
    <label>Master Agreement Date</label>
    <type>Date</type>
</CustomField>