force-app/main/default/objects/Lease_Termination__c/fields/Master_Agreement_Title__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Title__c</fullName>
    <label>Master Agreement Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>