force-app/main/default/objects/Lease_Termination__c/fields/NNR_NOT_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>NNR_NOT_Approved_Date__c</fullName>
    <label>NNR/NOT Approved Date (MLA Only)</label>
    <type>Date</type>
</CustomField>