force-app/main/default/objects/Lease_Termination__c/fields/NNR_NOT_Drafted__c.field-meta.xml
<CustomField>
    <fullName>NNR_NOT_Drafted__c</fullName>
    <label>NNR/NOT Drafted (Date)</label>
    <type>Date</type>
</CustomField>