force-app/main/default/objects/Lease_Termination__c/fields/NNR_NOT_Sent_to_LL_Date__c.field-meta.xml
<CustomField>
    <fullName>NNR_NOT_Sent_to_LL_Date__c</fullName>
    <label>NNR/NOT Sent to LL (Date)</label>
    <type>Date</type>
</CustomField>