force-app/main/default/objects/Lease_Termination__c/fields/NNR_NOT_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>NNR_NOT_Submitted_for_Approval__c</fullName>
    <label>NNR/NOT Submitted for Approval (MLA)</label>
    <type>Date</type>
</CustomField>