force-app/main/default/objects/Lease_Termination__c/fields/Notice_Sent_Via__c.field-meta.xml
<CustomField>
    <fullName>Notice_Sent_Via__c</fullName>
    <label>Notice Sent Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Service</fullName>
            </value>
            <value>
                <fullName>First Class Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>