force-app/main/default/objects/Lease_Termination__c/fields/Pursuant_to_a_Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Pursuant_to_a_Master_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pursuant to a Master Agreement</label>
    <type>Checkbox</type>
</CustomField>