force-app/main/default/objects/Lease_Termination__c/fields/Region_DivestSite__c.field-meta.xml
<CustomField>
    <fullName>Region_DivestSite__c</fullName>
    <label>Region(DivestSite)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>