force-app/main/default/objects/Lease_Termination__c/fields/Site_Additional_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Additional_Address__c</fullName>
    <label>Site Additional Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>