force-app/main/default/objects/Lease_Termination__c/fields/Site_Additional_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Site_Additional_City_State_Zip__c</fullName>
    <label>Site Additional City, State Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>