force-app/main/default/objects/Lease_Termination__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>Divestiture_Site__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>