force-app/main/default/objects/Lease_Termination__c/fields/Site_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Site_City_State_Zip__c</fullName>
    <formula>Divestiture_Site__r.City__c  &amp;&quot;, &quot;  &amp;   Divestiture_Site__r.State__c  &amp; &quot; &quot;  &amp;  Divestiture_Site__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site City, State, Zip</label>
    <type>Text</type>
</CustomField>