force-app/main/default/objects/Lease_Termination__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Terminations</relationshipName>
    <type>Lookup</type>
</CustomField>