force-app/main/default/objects/Lease_Termination__c/fields/Termination_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Type__c</fullName>
    <label>Termination Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>If the Agreement requires payment of the termination fee to accompany the Termination Notice, insert the following:</fullName>
            </value>
            <value>
                <fullName>Enclosed is check number ___________, representing the termination fee required by Paragraph ____ of the Agreement.</fullName>
            </value>
            <value>
                <fullName>All fees associated with the termination of this Agreement set forth in Paragraph ___ will be processed through and paid in accordance with the regular payment of rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>