force-app/main/default/objects/Lease_Termination__c/fields/Termination_Paragraph_Number__c.field-meta.xml
<CustomField>
    <fullName>Termination_Paragraph_Number__c</fullName>
    <label>Termination Paragraph Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>