force-app/main/default/objects/Lease_Termination__c/recordTypes/Notice_of_Non_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Notice_of_Non_Renewal</fullName>
    <active>true</active>
    <label>Notice of Non-Renewal</label>
</RecordType>