force-app/main/default/objects/Lease_Termination__c/recordTypes/Notice_of_Termination.recordType-meta.xml
<RecordType>
    <fullName>Notice_of_Termination</fullName>
    <active>true</active>
    <label>Notice of Termination</label>
</RecordType>