force-app/main/default/objects/Lease_Termination__c/recordTypes/Termination_of_Occupancy.recordType-meta.xml
<RecordType>
    <fullName>Termination_of_Occupancy</fullName>
    <active>true</active>
    <label>Termination of Occupancy</label>
</RecordType>