force-app/main/default/objects/Lease_Termination__c/validationRules/Lease_ID_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_ID_Check</fullName>
    <active>true</active>
    <description>Lease_ID__c should not be null on saving the record</description>
    <errorConditionFormula>ISBLANK(Lease_ID__c)</errorConditionFormula>
    <errorMessage>Lease ID is required field</errorMessage>
</ValidationRule>